--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
 <h4>&nbsp;</h4> 
 <h4>Does the Application collect precise real time location information of the device?</h4> 
 <p></p> 
-<p>When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map with relevant advertisements. We will not share your current location with other users or partners.</p> 
+<p>When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map. We will not share your current location to third party. We DO NOT fetch the location in when the app is not in use.</p> 
 <p></p> 
-<p>If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings and/or within the mobile application.&nbsp;</p> 
+<p>If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings.&nbsp;</p> 
 <p>&nbsp;</p> 
 <h4>Do third parties see and/or have access to information obtained by the Application?</h4> 
 <p></p> 
-<p>Yes. We will share your information with third parties only in the ways that are described in this privacy statement.</p> 
-<p>We may disclose User Provided and Automatically Collected Information:</p> 
-<ul> 
- <li> <p>as required by law, such as to comply with a subpoena, or similar legal process;</p> </li> 
- <li> <p>when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a&nbsp;government request;</p> </li> 
- <li> <p>with our trusted services providers who work on our behalf, do not have an&nbsp;independent use of the information we disclose to them, and have agreed to adhere&nbsp;to the rules set forth in this privacy statement.</p> </li> 
- <li> <p>if&nbsp;Developer Company Name&nbsp;is involved in a merger, acquisition, or sale of all or a&nbsp;portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you may have regarding this information.</p> </li> 
+<p>No.</p> 
 </ul> 
 <p></p> 
 <p>&nbsp;</p> 
