--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h4>&nbsp;</h4> 
 <h4>Does the Application collect precise real time location information of the device?</h4> 
 <p></p> 
-<p>When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map. We will not share your current location to third party. We DO NOT fetch the location in when the app is not in use.</p> 
+<p>When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map. We will not share your current location to third party. We DO NOT fetch the location when the app is not in use.</p> 
 <p></p> 
 <p>If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings.&nbsp;</p> 
 <p>&nbsp;</p> 
